lab02/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> sys_instruction ;
Rule 7     instruction -> assignment ;
Rule 8     instruction -> { instructions }
Rule 9     sys_instruction -> RETURN expression
Rule 10    sys_instruction -> BREAK
Rule 11    sys_instruction -> CONTINUE
Rule 12    sys_instruction -> PRINT print_values
Rule 13    instruction -> IF ( condition ) instruction
Rule 14    instruction -> IF ( condition ) instruction ELSE instruction
Rule 15    instruction -> FOR var = expression : expression instruction
Rule 16    instruction -> WHILE ( condition ) instruction
Rule 17    assignment -> var assignment_operator expression
Rule 18    assignment -> matrix_element assignment_operator expression
Rule 19    assignment -> vector_element assignment_operator expression
Rule 20    assignment_operator -> =
Rule 21    assignment_operator -> ADDASSIGN
Rule 22    assignment_operator -> SUBASSIGN
Rule 23    assignment_operator -> MULASSIGN
Rule 24    assignment_operator -> DIVASSIGN
Rule 25    matrix -> [ vectors ]
Rule 26    vector -> [ variables ]
Rule 27    vectors -> vectors , vector
Rule 28    vectors -> vector
Rule 29    matrix_function -> function_name ( INTNUM )
Rule 30    function_name -> EYE
Rule 31    function_name -> ONES
Rule 32    function_name -> ZEROS
Rule 33    var -> ID
Rule 34    number -> INTNUM
Rule 35    number -> FLOATNUM
Rule 36    string -> STRING
Rule 37    variable -> number
Rule 38    variable -> var
Rule 39    variable -> element
Rule 40    vector_element -> ID [ INTNUM ]
Rule 41    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 42    element -> vector_element
Rule 43    element -> matrix_element
Rule 44    variables -> variables , variable
Rule 45    variables -> variable
Rule 46    expression -> number
Rule 47    expression -> var
Rule 48    expression -> matrix
Rule 49    expression -> matrix_function
Rule 50    expression -> uminus
Rule 51    expression -> transposition
Rule 52    expression -> matrix_element
Rule 53    expression -> vector_element
Rule 54    expression -> expression + expression
Rule 55    expression -> expression - expression
Rule 56    expression -> expression * expression
Rule 57    expression -> expression / expression
Rule 58    expression -> expression DOTADD expression
Rule 59    expression -> expression DOTSUB expression
Rule 60    expression -> expression DOTMUL expression
Rule 61    expression -> expression DOTDIV expression
Rule 62    condition -> expression EQ expression
Rule 63    condition -> expression NE expression
Rule 64    condition -> expression LE expression
Rule 65    condition -> expression GE expression
Rule 66    condition -> expression LT expression
Rule 67    condition -> expression GT expression
Rule 68    uminus -> - expression
Rule 69    transposition -> expression '
Rule 70    print_values -> print_values , string
Rule 71    print_values -> print_values , expression
Rule 72    print_values -> string
Rule 73    print_values -> expression

Terminals, with rules where they appear

'                    : 69
(                    : 13 14 16 29
)                    : 13 14 16 29
*                    : 56
+                    : 54
,                    : 27 41 44 70 71
-                    : 55 68
/                    : 57
:                    : 15
;                    : 6 7
=                    : 15 20
ADDASSIGN            : 21
BREAK                : 10
CONTINUE             : 11
DIVASSIGN            : 24
DOTADD               : 58
DOTDIV               : 61
DOTMUL               : 60
DOTSUB               : 59
ELSE                 : 14
EQ                   : 62
EYE                  : 30
FLOATNUM             : 35
FOR                  : 15
GE                   : 65
GT                   : 67
ID                   : 33 40 41
IF                   : 13 14
INTNUM               : 29 34 40 41 41
LE                   : 64
LT                   : 66
MULASSIGN            : 23
NE                   : 63
ONES                 : 31
PRINT                : 12
RETURN               : 9
STRING               : 36
SUBASSIGN            : 22
WHILE                : 16
ZEROS                : 32
[                    : 25 26 40 41
]                    : 25 26 40 41
error                : 
{                    : 8
}                    : 8

Nonterminals, with rules where they appear

assignment           : 7
assignment_operator  : 17 18 19
condition            : 13 14 16
element              : 39
expression           : 9 15 15 17 18 19 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 69 71 73
function_name        : 29
instruction          : 4 5 13 14 14 15 16
instructions         : 2 4 8
instructions_opt     : 1
matrix               : 48
matrix_element       : 18 43 52
matrix_function      : 49
number               : 37 46
print_values         : 12 70 71
program              : 0
string               : 70 72
sys_instruction      : 6
transposition        : 51
uminus               : 50
var                  : 15 17 38 47
variable             : 44 45
variables            : 26 44
vector               : 27 28
vector_element       : 19 42 53
vectors              : 25 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . sys_instruction ;
    (7) instruction -> . assignment ;
    (8) instruction -> . { instructions }
    (13) instruction -> . IF ( condition ) instruction
    (14) instruction -> . IF ( condition ) instruction ELSE instruction
    (15) instruction -> . FOR var = expression : expression instruction
    (16) instruction -> . WHILE ( condition ) instruction
    (9) sys_instruction -> . RETURN expression
    (10) sys_instruction -> . BREAK
    (11) sys_instruction -> . CONTINUE
    (12) sys_instruction -> . PRINT print_values
    (17) assignment -> . var assignment_operator expression
    (18) assignment -> . matrix_element assignment_operator expression
    (19) assignment -> . vector_element assignment_operator expression
    (33) var -> . ID
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . sys_instruction ;
    (7) instruction -> . assignment ;
    (8) instruction -> . { instructions }
    (13) instruction -> . IF ( condition ) instruction
    (14) instruction -> . IF ( condition ) instruction ELSE instruction
    (15) instruction -> . FOR var = expression : expression instruction
    (16) instruction -> . WHILE ( condition ) instruction
    (9) sys_instruction -> . RETURN expression
    (10) sys_instruction -> . BREAK
    (11) sys_instruction -> . CONTINUE
    (12) sys_instruction -> . PRINT print_values
    (17) assignment -> . var assignment_operator expression
    (18) assignment -> . matrix_element assignment_operator expression
    (19) assignment -> . vector_element assignment_operator expression
    (33) var -> . ID
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> sys_instruction . ;

    ;               shift and go to state 20


state 6

    (7) instruction -> assignment . ;

    ;               shift and go to state 21


state 7

    (8) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . sys_instruction ;
    (7) instruction -> . assignment ;
    (8) instruction -> . { instructions }
    (13) instruction -> . IF ( condition ) instruction
    (14) instruction -> . IF ( condition ) instruction ELSE instruction
    (15) instruction -> . FOR var = expression : expression instruction
    (16) instruction -> . WHILE ( condition ) instruction
    (9) sys_instruction -> . RETURN expression
    (10) sys_instruction -> . BREAK
    (11) sys_instruction -> . CONTINUE
    (12) sys_instruction -> . PRINT print_values
    (17) assignment -> . var assignment_operator expression
    (18) assignment -> . matrix_element assignment_operator expression
    (19) assignment -> . vector_element assignment_operator expression
    (33) var -> . ID
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]

    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    instructions                   shift and go to state 22
    instruction                    shift and go to state 4
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 8

    (13) instruction -> IF . ( condition ) instruction
    (14) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 23


state 9

    (15) instruction -> FOR . var = expression : expression instruction
    (33) var -> . ID

    ID              shift and go to state 25

    var                            shift and go to state 24

state 10

    (17) assignment -> var . assignment_operator expression
    (20) assignment_operator -> . =
    (21) assignment_operator -> . ADDASSIGN
    (22) assignment_operator -> . SUBASSIGN
    (23) assignment_operator -> . MULASSIGN
    (24) assignment_operator -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_operator            shift and go to state 26

state 11

    (16) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 32


state 12

    (9) sys_instruction -> RETURN . expression
    (46) expression -> . number
    (47) expression -> . var
    (48) expression -> . matrix
    (49) expression -> . matrix_function
    (50) expression -> . uminus
    (51) expression -> . transposition
    (52) expression -> . matrix_element
    (53) expression -> . vector_element
    (54) expression -> . expression + expression
    (55) expression -> . expression - expression
    (56) expression -> . expression * expression
    (57) expression -> . expression / expression
    (58) expression -> . expression DOTADD expression
    (59) expression -> . expression DOTSUB expression
    (60) expression -> . expression DOTMUL expression
    (61) expression -> . expression DOTDIV expression
    (34) number -> . INTNUM
    (35) number -> . FLOATNUM
    (33) var -> . ID
    (25) matrix -> . [ vectors ]
    (29) matrix_function -> . function_name ( INTNUM )
    (68) uminus -> . - expression
    (69) transposition -> . expression '
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]
    (30) function_name -> . EYE
    (31) function_name -> . ONES
    (32) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    expression                     shift and go to state 33
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 13

    (10) sys_instruction -> BREAK .

    ;               reduce using rule 10 (sys_instruction -> BREAK .)


state 14

    (11) sys_instruction -> CONTINUE .

    ;               reduce using rule 11 (sys_instruction -> CONTINUE .)


state 15

    (12) sys_instruction -> PRINT . print_values
    (70) print_values -> . print_values , string
    (71) print_values -> . print_values , expression
    (72) print_values -> . string
    (73) print_values -> . expression
    (36) string -> . STRING
    (46) expression -> . number
    (47) expression -> . var
    (48) expression -> . matrix
    (49) expression -> . matrix_function
    (50) expression -> . uminus
    (51) expression -> . transposition
    (52) expression -> . matrix_element
    (53) expression -> . vector_element
    (54) expression -> . expression + expression
    (55) expression -> . expression - expression
    (56) expression -> . expression * expression
    (57) expression -> . expression / expression
    (58) expression -> . expression DOTADD expression
    (59) expression -> . expression DOTSUB expression
    (60) expression -> . expression DOTMUL expression
    (61) expression -> . expression DOTDIV expression
    (34) number -> . INTNUM
    (35) number -> . FLOATNUM
    (33) var -> . ID
    (25) matrix -> . [ vectors ]
    (29) matrix_function -> . function_name ( INTNUM )
    (68) uminus -> . - expression
    (69) transposition -> . expression '
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]
    (30) function_name -> . EYE
    (31) function_name -> . ONES
    (32) function_name -> . ZEROS

    STRING          shift and go to state 53
    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    print_values                   shift and go to state 50
    string                         shift and go to state 51
    expression                     shift and go to state 52
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 16

    (18) assignment -> matrix_element . assignment_operator expression
    (20) assignment_operator -> . =
    (21) assignment_operator -> . ADDASSIGN
    (22) assignment_operator -> . SUBASSIGN
    (23) assignment_operator -> . MULASSIGN
    (24) assignment_operator -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_operator            shift and go to state 54

state 17

    (19) assignment -> vector_element . assignment_operator expression
    (20) assignment_operator -> . =
    (21) assignment_operator -> . ADDASSIGN
    (22) assignment_operator -> . SUBASSIGN
    (23) assignment_operator -> . MULASSIGN
    (24) assignment_operator -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_operator            shift and go to state 55

state 18

    (33) var -> ID .
    (41) matrix_element -> ID . [ INTNUM , INTNUM ]
    (40) vector_element -> ID . [ INTNUM ]

    =               reduce using rule 33 (var -> ID .)
    ADDASSIGN       reduce using rule 33 (var -> ID .)
    SUBASSIGN       reduce using rule 33 (var -> ID .)
    MULASSIGN       reduce using rule 33 (var -> ID .)
    DIVASSIGN       reduce using rule 33 (var -> ID .)
    +               reduce using rule 33 (var -> ID .)
    -               reduce using rule 33 (var -> ID .)
    *               reduce using rule 33 (var -> ID .)
    /               reduce using rule 33 (var -> ID .)
    DOTADD          reduce using rule 33 (var -> ID .)
    DOTSUB          reduce using rule 33 (var -> ID .)
    DOTMUL          reduce using rule 33 (var -> ID .)
    DOTDIV          reduce using rule 33 (var -> ID .)
    '               reduce using rule 33 (var -> ID .)
    ;               reduce using rule 33 (var -> ID .)
    ,               reduce using rule 33 (var -> ID .)
    EQ              reduce using rule 33 (var -> ID .)
    NE              reduce using rule 33 (var -> ID .)
    LE              reduce using rule 33 (var -> ID .)
    GE              reduce using rule 33 (var -> ID .)
    LT              reduce using rule 33 (var -> ID .)
    GT              reduce using rule 33 (var -> ID .)
    :               reduce using rule 33 (var -> ID .)
    )               reduce using rule 33 (var -> ID .)
    {               reduce using rule 33 (var -> ID .)
    IF              reduce using rule 33 (var -> ID .)
    FOR             reduce using rule 33 (var -> ID .)
    WHILE           reduce using rule 33 (var -> ID .)
    RETURN          reduce using rule 33 (var -> ID .)
    BREAK           reduce using rule 33 (var -> ID .)
    CONTINUE        reduce using rule 33 (var -> ID .)
    PRINT           reduce using rule 33 (var -> ID .)
    ID              reduce using rule 33 (var -> ID .)
    [               shift and go to state 56


state 19

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 20

    (6) instruction -> sys_instruction ; .

    {               reduce using rule 6 (instruction -> sys_instruction ; .)
    IF              reduce using rule 6 (instruction -> sys_instruction ; .)
    FOR             reduce using rule 6 (instruction -> sys_instruction ; .)
    WHILE           reduce using rule 6 (instruction -> sys_instruction ; .)
    RETURN          reduce using rule 6 (instruction -> sys_instruction ; .)
    BREAK           reduce using rule 6 (instruction -> sys_instruction ; .)
    CONTINUE        reduce using rule 6 (instruction -> sys_instruction ; .)
    PRINT           reduce using rule 6 (instruction -> sys_instruction ; .)
    ID              reduce using rule 6 (instruction -> sys_instruction ; .)
    $end            reduce using rule 6 (instruction -> sys_instruction ; .)
    }               reduce using rule 6 (instruction -> sys_instruction ; .)
    ELSE            reduce using rule 6 (instruction -> sys_instruction ; .)


state 21

    (7) instruction -> assignment ; .

    {               reduce using rule 7 (instruction -> assignment ; .)
    IF              reduce using rule 7 (instruction -> assignment ; .)
    FOR             reduce using rule 7 (instruction -> assignment ; .)
    WHILE           reduce using rule 7 (instruction -> assignment ; .)
    RETURN          reduce using rule 7 (instruction -> assignment ; .)
    BREAK           reduce using rule 7 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 7 (instruction -> assignment ; .)
    PRINT           reduce using rule 7 (instruction -> assignment ; .)
    ID              reduce using rule 7 (instruction -> assignment ; .)
    $end            reduce using rule 7 (instruction -> assignment ; .)
    }               reduce using rule 7 (instruction -> assignment ; .)
    ELSE            reduce using rule 7 (instruction -> assignment ; .)


state 22

    (8) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . sys_instruction ;
    (7) instruction -> . assignment ;
    (8) instruction -> . { instructions }
    (13) instruction -> . IF ( condition ) instruction
    (14) instruction -> . IF ( condition ) instruction ELSE instruction
    (15) instruction -> . FOR var = expression : expression instruction
    (16) instruction -> . WHILE ( condition ) instruction
    (9) sys_instruction -> . RETURN expression
    (10) sys_instruction -> . BREAK
    (11) sys_instruction -> . CONTINUE
    (12) sys_instruction -> . PRINT print_values
    (17) assignment -> . var assignment_operator expression
    (18) assignment -> . matrix_element assignment_operator expression
    (19) assignment -> . vector_element assignment_operator expression
    (33) var -> . ID
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]

    }               shift and go to state 57
    {               shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    RETURN          shift and go to state 12
    BREAK           shift and go to state 13
    CONTINUE        shift and go to state 14
    PRINT           shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    sys_instruction                shift and go to state 5
    assignment                     shift and go to state 6
    var                            shift and go to state 10
    matrix_element                 shift and go to state 16
    vector_element                 shift and go to state 17

state 23

    (13) instruction -> IF ( . condition ) instruction
    (14) instruction -> IF ( . condition ) instruction ELSE instruction
    (62) condition -> . expression EQ expression
    (63) condition -> . expression NE expression
    (64) condition -> . expression LE expression
    (65) condition -> . expression GE expression
    (66) condition -> . expression LT expression
    (67) condition -> . expression GT expression
    (46) expression -> . number
    (47) expression -> . var
    (48) expression -> . matrix
    (49) expression -> . matrix_function
    (50) expression -> . uminus
    (51) expression -> . transposition
    (52) expression -> . matrix_element
    (53) expression -> . vector_element
    (54) expression -> . expression + expression
    (55) expression -> . expression - expression
    (56) expression -> . expression * expression
    (57) expression -> . expression / expression
    (58) expression -> . expression DOTADD expression
    (59) expression -> . expression DOTSUB expression
    (60) expression -> . expression DOTMUL expression
    (61) expression -> . expression DOTDIV expression
    (34) number -> . INTNUM
    (35) number -> . FLOATNUM
    (33) var -> . ID
    (25) matrix -> . [ vectors ]
    (29) matrix_function -> . function_name ( INTNUM )
    (68) uminus -> . - expression
    (69) transposition -> . expression '
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]
    (30) function_name -> . EYE
    (31) function_name -> . ONES
    (32) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    condition                      shift and go to state 58
    expression                     shift and go to state 59
    number                         shift and go to state 34
    var                            shift and go to state 35
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 24

    (15) instruction -> FOR var . = expression : expression instruction

    =               shift and go to state 60


state 25

    (33) var -> ID .

    =               reduce using rule 33 (var -> ID .)


state 26

    (17) assignment -> var assignment_operator . expression
    (46) expression -> . number
    (47) expression -> . var
    (48) expression -> . matrix
    (49) expression -> . matrix_function
    (50) expression -> . uminus
    (51) expression -> . transposition
    (52) expression -> . matrix_element
    (53) expression -> . vector_element
    (54) expression -> . expression + expression
    (55) expression -> . expression - expression
    (56) expression -> . expression * expression
    (57) expression -> . expression / expression
    (58) expression -> . expression DOTADD expression
    (59) expression -> . expression DOTSUB expression
    (60) expression -> . expression DOTMUL expression
    (61) expression -> . expression DOTDIV expression
    (34) number -> . INTNUM
    (35) number -> . FLOATNUM
    (33) var -> . ID
    (25) matrix -> . [ vectors ]
    (29) matrix_function -> . function_name ( INTNUM )
    (68) uminus -> . - expression
    (69) transposition -> . expression '
    (41) matrix_element -> . ID [ INTNUM , INTNUM ]
    (40) vector_element -> . ID [ INTNUM ]
    (30) function_name -> . EYE
    (31) function_name -> . ONES
    (32) function_name -> . ZEROS

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    ID              shift and go to state 18
    [               shift and go to state 45
    -               shift and go to state 42
    EYE             shift and go to state 47
    ONES            shift and go to state 48
    ZEROS           shift and go to state 49

    var                            shift and go to state 35
    expression                     shift and go to state 61
    number                         shift and go to state 34
    matrix                         shift and go to state 36
    matrix_function                shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    matrix_element                 shift and go to state 40
    vector_element                 shift and go to state 41
    function_name                  shift and go to state 46

state 27

    (20) assignment_operator -> = .
